--- a/testing/lab1/gradle.properties
+++ b/testing/lab1/gradle.properties
@@ -1,3 +1,6 @@
 org.gradle.jvmargs=-XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.configureondemand=true
 org.gradle.parallel=true
+
+driverLocation=C:/sdk/geckodriver/geckodriver.exe
+
