--- a/testing/lab2/build.gradle
+++ b/testing/lab2/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.2.51'
+    ext.kotlin_version = '1.3.50'
 
     repositories {
         mavenCentral()
@@ -18,14 +18,18 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk8', version: kotlin_version
+    compile 'org.jetbrains.exposed:exposed:0.14.2'
+    compile 'org.postgresql:postgresql:42.2.6'
+    compile 'org.slf4j:slf4j-simple:1.6.2'
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'org.jetbrains.kotlin', name: 'kotlin-test'
-    testCompile group: 'org.jetbrains.kotlin', name: 'kotlin-test-junit'
+    testCompile 'junit:junit:4.12'
+    testCompile 'io.kotlintest:kotlintest-runner-junit4:3.4.1'
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
 }
 
 compileKotlin {
